force-app/main/default/objects/KanbanConfiguration__c/KanbanConfiguration__c.object-meta.xml
<CustomObject>
    <label>Kanban Configuration</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>