force-app/main/default/objects/KanbanConfiguration__c/fields/ApiFieldName__c.field-meta.xml
<CustomField>
    <fullName>ApiFieldName__c</fullName>
    <inlineHelpText>Utilize para filtrar por algum campo específico. Utilize o nome API.</inlineHelpText>
    <label>Filtrar por Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>