force-app/main/default/objects/KanbanConfiguration__c/fields/ApiFieldNameValue__c.field-meta.xml
<CustomField>
    <fullName>ApiFieldNameValue__c</fullName>
    <inlineHelpText>Utilize para filtrar por algum valor do campo específico acima. Utilize o nome API.</inlineHelpText>
    <label>Valor do Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>