force-app/main/default/objects/KanbanConfiguration__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <inlineHelpText>Caso não tenha, coloque o mesmo objeto</inlineHelpText>
    <label>Objeto Filho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>