force-app/main/default/objects/KanbanConfiguration__c/fields/Exclude_From_Group_By__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Group_By__c</fullName>
    <inlineHelpText>Utiliza para excluir algum valor do Status/Stage do agrupamento</inlineHelpText>
    <label>Excluir do Agrupamento</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>