force-app/main/default/objects/KanbanConfiguration__c/fields/Fields_To_Show__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Show__c</fullName>
    <inlineHelpText>Separado por ponto e vírgula e sem usar espaço</inlineHelpText>
    <label>Campos para exibir</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>