force-app/main/default/objects/KanbanConfiguration__c/fields/Filter_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_2__c</fullName>
    <inlineHelpText>Utilize para filtrar por algum campo específico. Utilize o nome API.</inlineHelpText>
    <label>Filtrar por Campo 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>