force-app/main/default/objects/KanbanConfiguration__c/fields/FilterFieldValue3__c.field-meta.xml
<CustomField>
    <fullName>FilterFieldValue3__c</fullName>
    <inlineHelpText>Utilize para filtrar por algum valor do campo colocado em &quot;Filtrar por Campo 1&quot;. 
Se o valor for uma data, use o formato: dd/mm/aaaa.
Em data, é possível usar os operadores: &quot;&lt;=&quot;, &quot;&gt;=&quot;, &quot;=&quot;, &quot;!=&quot;, &quot;&lt;&quot;, &quot;&gt;&quot;. Exemplo: &lt;=01/01/2025.
Em texto ou booleano, é possível usar o operador &quot;!=&quot;. Exemplo: !=Ganho</inlineHelpText>
    <label>Valor do Campo 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>