force-app/main/default/objects/KanbanConfiguration__c/fields/For_Object__c.field-meta.xml
<CustomField>
    <fullName>For_Object__c</fullName>
    <label>Para o Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>