force-app/main/default/objects/KanbanConfiguration__c/fields/Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Name_Field__c</fullName>
    <label>Campo Nome (Não Editar)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>