force-app/main/default/objects/KanbanConfiguration__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <inlineHelpText>Se precisar filtrar por tipo de registro, utilizar o DeveloperName</inlineHelpText>
    <label>Tipo de Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>