force-app/main/default/objects/KanbanConfiguration__c/fields/Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>Relation_Field__c</fullName>
    <label>Campo de Relação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>