force-app/main/default/objects/KanbanConfiguration__c/fields/Summarize_By__c.field-meta.xml
<CustomField>
    <fullName>Summarize_By__c</fullName>
    <label>Resumir Por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>